umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_aliphatic_pentane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C#h3" "C#h2" "C#h2" "C#h2" "C#h3"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single]]}
    :success true
    :tie-breaks [0 1 2 3 4]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 [
        "C#h3#v#d0#t0#a!#m!"
        "C#h2#u#v#d0#t0#a!#m!"
        "C#h#u2#v#d0#t0#a!#m!"
        "C#h#n#v#d0#t0#a!#m!"
        "C#n#u#v#d0#t0#a!#m!"
        "C#u3#v#d0#t0#a!#m!"]
      1 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      2 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      3 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      4 [
        "C#h3#v#d0#t0#a!#m!"
        "C#h2#u#v#d0#t0#a!#m!"
        "C#h#u2#v#d0#t0#a!#m!"
        "C#h#n#v#d0#t0#a!#m!"
        "C#n#u#v#d0#t0#a!#m!"
        "C#u3#v#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C#h3" "C#h2" "C#h2" "C#h2" "C#h3"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single]]}
    :success true
    :tie-breaks [0 1 2 3 4]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#n#u#v#a!" "C#h#n#v#a!" "C#h2#u#v#a!" "C#h3#v#a!"]
      1 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      2 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      3 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      4 ["C#n#u#v#a!" "C#h#n#v#a!" "C#h2#u#v#a!" "C#h3#v#a!"]}}}
