umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_aliphatic_tetrahedrane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C#h" "C#h" "C#h" "C#h"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [1 2 :single]
        [1 3 :single]
        [2 3 :single]]}
    :success true
    :tie-breaks [0 1 2 3]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]
      1 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]
      2 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]
      3 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C#h" "C#h" "C#h" "C#h"]
      :bonds [
        [0 1 :single]
        [0 2 :single]
        [0 3 :single]
        [1 2 :single]
        [1 3 :single]
        [2 3 :single]]}
    :success true
    :tie-breaks [0 1 2 3]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#u#v3#a!" "C#h#v3#a!"]
      1 ["C#u#v3#a!" "C#h#v3#a!"]
      2 ["C#u#v3#a!" "C#h#v3#a!"]
      3 ["C#u#v3#a!" "C#h#v3#a!"]}}}
