umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_bicyclo-1.1.1-pentane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#h#v3" "C#h2#v2"] :bonds [[0 1 "1"] [1 3 "1"] [0 2 "1"] [2 3 "1"] [0 4 "1"] [3 4 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms ["C#h#v3" "C#h2#v2" "C#h2#v2" "C#h#v3" "C#h2#v2"] :bonds [[0 1 "1"] [1 3 "1"] [0 2 "1"] [2 3 "1"] [0 4 "1"] [3 4 "1"]] :charge 0 :spin "#u0 #s1"}}}
